# projeto-ip

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json
src/: custom.tmpl  main.py
src/components/: achievements.py  animation.py  audio_manager.py  camera.py  config.py  dialog_printer.py  file_manager.py  items_info.py  motion.py  object.py  statemachine.py  statistics.py
src/core/: app.py  assets.py  constants.py  game.py  input.py  joystick.py  setup.py
src/data/: config.json
src/entities/: boss.py  coin.py  collectable.py  enemy.py  enemy_attack.py  game_object.py  player.py
src/entities/attacks/: attack01.py  attack02.py  attack03.py  attack04.py  attack05.py  attack_list.py
src/entities/bosses/: bosses_info.py
src/entities/bosses/michael_jackson/: instance.py
src/entities/bosses/michael_jackson/attacks/: #assets.py  attack02.py  attack03.py  attack05.py  attack06.py  attack07.py  attack08.py  attack09.py  attack10.py  attack11.py  attack12.py  attack13.py  attack14.py  attack16.py  attack_list.py
src/scenes/: achievements.py  context.py  cutscene.py  dialog.py  flowey.py  game.py  gameover.py  global.py  intro.py  intro_credits.py  menu.py  pause.py  scene.py  settings.py  stats.py  victory.py
src/scenes/states/: act.py  attack.py  battle_menu.py  fight.py  final_cutscene.py  gameover_cutscene.py  item.py
src/utilities/: audio.py  filters.py  languages.py  math.py  sprite.py
src/utils/: constants.py
