[project]
name = "projeto-ip"
version = "0.0.1"
description = "Projeto final da disciplina de Introdução a Programação"
authors = [
  { name="Bruno Rodrigues e Silva", email="brs3@cin.ufpe.br" },
  { name="João Eduardo Teixeira de Carvalho Gondim Lavieri", email="jetcgl@cin.ufpe.com.br" },
  { name="Gabriel Almeida de Lima", email="gal2@cin.ufpe.com.br"},
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["pygame"]

[project.urls]
Repository = "https://github.com/bruno-rodrigues0/projeto-ip"

